# runbook

./: README.adoc  README.md  pyproject.toml
examples/: basic-result.adoc  basic-result.md  basic.adoc  variable-substitution.adoc
src/runbook/: book.py  cli.py  datamodel.py  reader.py  tmux.py  tui.py  writer.py
tests/: test_adocreader.py  test_adocwriter.py  test_book.py
tests/data/: basic_input.adoc
