[project]
name = "runbook"
version = "0.1.0"
description = "Add your description here"
readme = {file = "README.adoc", content-type = "text/asciidoc"}
authors = [
    { name = "Rob Donnelly", email = "Robert.Donnelly@jpl.nasa.gov" }
]
requires-python = ">=3.12"
dependencies = [
    "libtmux>=0.55.0",
]

[project.scripts]
runbook = "runbook.cli:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
